# two-tower

./: .gitignore  Dockerfile  pyproject.toml
notebooks/: EDA-two-tower.ipynb
scripts/: computa_setup.sh
src/: cbow.py  cbow_inference.py  dataset.py  inference.py  model.py  tokenizer.py  tt_train.py
src/deploy/app/: main.py  search.py
