[project]
name = "two-tower"
version = "0.1.0"
description = ""
authors = [
    {name = "nicocro",email = "ncroce00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jupyterlab (>=4.3.5,<5.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "dataset (>=1.6.2,<2.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "wandb (>=0.19.5,<0.20.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
